--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header>
-            <input type="text" class="search-box" placeholder="Enter a city">
+            <input type="text" class="search-box" id="search-city" placeholder="Enter a city">
         </header>
         <main>
             <section id="location">
