--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Info</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="svg/favicon.svg" sizes="any" type="image/svg+xml">
+
 </head>
 <body>
     <div class="container">
